# krita-scripts

./: .gitignore  .python-version  README.md  export_png_jpeg.py  pyproject.toml  setup_render.py
src/: export_png_jpeg.py  setup_render.py
